# platform.upstream.sgml-common

./: Makefile.am  Makefile.cvs  Makefile.in  configure  configure.in  project.config
config/: Makefile.am  Makefile.in
doc/: Makefile.am  Makefile.in  sgml-common.sgml
doc/HTML/: Makefile.am  Makefile.in
doc/man/: Makefile.am  Makefile.in  install-catalog.8  manpage.refs
doc/refentry/: Makefile.am  Makefile.in  install-catalog.sgml
packaging/: sgml-common.changes  sgml-common.spec
sgml-iso-entities/: Makefile.am  Makefile.in
xml-iso-entities/: Makefile.am  Makefile.in
