dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.am)

AM_INIT_AUTOMAKE(sgml-common, 0.6.3)

docdir='$(prefix)/doc'
AC_SUBST(docdir)

dnl Checks for programs.

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile \
          bin/Makefile bin/install-catalog \
          config/Makefile \
          doc/Makefile doc/HTML/Makefile doc/man/Makefile doc/refentry/Makefile \
          sgml-iso-entities/Makefile xml-iso-entities/Makefile)
